package edu.itc.enrollment_scheduling_system.model;

public class Schedule {

}
